@@ -11,6 +11,7 @@ _arguments -s -A "-*" -S \
   '(-p -k -s -u -z)-q[read y or n character from terminal]' \
   '(-q)-k+[specify number of characters to read]:: :_guard "[0-9]#" "number of characters"' \
   '(-q -z)-t+[test if input is available before reading]:: :_guard "[0-9.]#" "timeout (seconds)"' \
+  '(-q)-d[specify delimiter to terminate input instead of newline]:delimiter' \
   '(-q -s -u -p -t)-z[read entry from editor buffer stack]' \
   '(-E)-e[input read is echoed and not assigned]' \
   '(-e)-E[input read is echoed]' \
